--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -8,12 +8,12 @@
 
   p {
     margin: 20px auto;
-    max-width: 400px;
+    max-width: 470px;
     text-align: center;
     padding: 0 25px;
     box-sizing: border-box;
   }
-  
+
   .link-button {
     &:first-of-type {
       margin-top: 60px;
